# pkg-diff

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
examples/: binary.diff  minijinja.diff
src/: diff.rs  main.rs  registries.rs  routes.rs  templates.rs
src/routes/: crates_show.rs  mod.rs  root.rs
templates/: compare.html  crates_show.html  error.html  index.html  inspect.html  layout.html  root.html
