[package]
name = "pkg-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
tokio = { version = "1.17.0", features = ["full"] }
minijinja = { version = "0.14.1", features = ["source"] }
lazy_static = "1.4.0"
patch = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
md5 = "0.7.0"
