[package]
name = "pkg-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
tokio = { version = "1.17.0", features = ["full"] }
minijinja = { version = "0.19.1", features = ["source"] }
lazy_static = "1.4.0"
patch = { git = "https://github.com/Locke23rus/patch-rs" }
serde = { version = "1.0.136", features = ["derive"] }
md5 = "0.7.0"
crates-index = "0.18.8"
rand = "0.8.5"
reqwest = "0.11.10"
flate2 = "1.0.23"
tar = "0.4.38"
async-trait = "0.1.53"
anyhow = "1.0.57"
bytes = "1.1.0"
sha2 = "0.10.2"
