[package]
name = "pkg-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
minijinja = { version = "1.0.3" }
patch = "0.7.0"
serde = { version = "1.0.164", features = ["derive"] }
md5 = "0.7.0"
crates-index = "0.19.10"
rand = "0.8.5"
reqwest = "0.11.18"
flate2 = "1.0.26"
tar = "0.4.38"
async-trait = "0.1.53"
anyhow = "1.0.71"
bytes = "1.4.0"
sha2 = "0.10.6"
